--- a/statefulset/server.yml
+++ b/statefulset/server.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: minecraft-server
-          image: itzg/minecraft-server
+          image: ghcr.io/nadmax/minekube:v1
           env:
             - name: EULA
               value: "TRUE"
